fix unit mapping save button which get hide behind the AI Chat bot Icon

--- a/apps/web-giddh/src/app/gst/unit-mapping/unit-mapping.component.scss
+++ b/apps/web-giddh/src/app/gst/unit-mapping/unit-mapping.component.scss
@@ -28,6 +28,7 @@
 .button-wrapper {
     display: flex;
     justify-content: flex-end;
-    padding-right: 30px;
-    padding-top: 20px;
+    padding-right: 110px;
+    padding-top: 45px;
+    padding-bottom: 5px;
 }
